--- a/b_example/b_basic/css/src/jquery_on_01.css
+++ b/b_example/b_basic/css/src/jquery_on_01.css
@@ -8,6 +8,17 @@
 .btn_area li{padding: 1rem; margin-right: 0.5rem;  float:left; height:2rem; background-color:#fff;}
 .btn_area li>a{display: block; width: 100%;  height: 100%;}
 
-p{margin-top:1rem; padding:0.5rem; background-color:#dfdfdf; font-size:1.2rem;  }
+p{margin-top:1rem; padding:0.5rem; background-color:#dfdfdf; font-size:1.4rem; }
 
-p>span{display: inline-block; width: 500px;  height: 3rem; background-color: #aaa;}
+p>span{display: inline-block; box-sizing:border-box; padding: 0.3rem; width: 500px;  height: 3rem; background-color: #555; color:#fff; font-size: 1.5rem;}
+
+/* ==================== */
+.focus{padding: 1rem; background-color: #acc;}
+.focus:after{content:" ";display: block; clear: both;}
+.focus>li{border: 1px solid #171717; width: 150px; height: 40px; text-align: center; 
+        line-height: 40px; float: left; margin-right: 1rem;}
+.focus>li>.btn{display: block; width: 100%; height: 100%; border: 0; background-color: #fff; cursor:pointer;}
+.btn:focus{outline:4px solid #fa0; outline-offset: 0;}
+
+
+
