--- a/b_example/b_basic/css/src/jquery_on_02.css
+++ b/b_example/b_basic/css/src/jquery_on_02.css
@@ -34,3 +34,13 @@ h2{padding:0.3rem 1rem; background-color: #aaf; margin-bottom: 1rem;}
 
 .fix{position: absolute; width: 350px; height: 30px; background-color: #939;}
 
+.offset{margin-top: 3rem; width: 100%; height: 2rem; background-color: #caa;}
+
+.offset>p{width: 40%; height: 2rem; background-color: #fff;}
+.por{float: left; }
+.pof{float: right; position: fixed; left: 50%;}
+.offset>p>span{display: block; float: right; width:70%; height: 100%; background-color: #ff0;}
+
+
+/* 스마트폰의 기준으로보면, 터치의 의미 */
+.pof:hover{background-color: #f06; color:#fff; font-size: 2rem;}
