--- a/b_example/c_normal/css/src/jquery/accordion_01.css
+++ b/b_example/c_normal/css/src/jquery/accordion_01.css
@@ -9,7 +9,7 @@ h1{float:left; padding: 0.5rem; box-sizing:border-box; width: 150px; height: 70p
 h2{width: 100%; height: 30px; font-size: 1.2rem; border-bottom:1px solid #333; text-indent:1rem; margin-bottom: 1rem;}
 
 
-#gnb{float: right; position: relative; z-index: 300; margin-top: 1.5rem; width: 900px; height: 30px; background-color: #fff; display: none;}
+#gnb{float:right; position:relative; z-index:300; margin-top:1.5rem; width:900px; height:30px; background-color:#fff;}
 #gnb>div{width: 100%; height: 100%;}
 #gnb dl{float: left; padding: 0 0.5rem; box-sizing: border-box; width: 20%; height: 100%; }
 #gnb dl>dt{width: 100%; height: 100%; font-size: 1.2rem; line-height: 30px;
