--- a/b_example/c_normal/css/base/common.css
+++ b/b_example/c_normal/css/base/common.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
 
 /* common.css */
-.hidden_wrap a, .hidden_wrap button{display: block; width: 100%; height: 100%;}
+.hidden_wrap a, .hidden_wrap button{
+  display: block; width: 100%; height: 100%; 
+  background-repeat: no-repeat; background-position:50% 50%;}
 
 .hidden,
 .hidden_wrap a>span,
 .hidden_wrap button>span{
   display: block; width: 0; height: 0; overflow: hidden; position:absolute; z-index: -100;}
+
 
 .clearfix:after, .clearfix::after {content:" "; display: block; width: 0; height: 0; clear: both;}
 
