--- a/b_example/c_normal/css/base/reset.css
+++ b/b_example/c_normal/css/base/reset.css
@@ -9,11 +9,11 @@ h1,h2,h3,h4,h5,h6,p,pre,div,ul,ol,li,dl,dt,dd,img, video, audio, q, button, bloc
   margin: 0; padding: 0; border: 0; outline: 0;}
 ul,ol,li{list-style:none;}
 
-a{text-decoration: none; color:#f06;}
+a{text-decoration: none; color:#171717;}
 button{border:0; border-radius:0; cursor:pointer;  background-color:transparent;}
 
 a:hover,a:focus, 
-button:hover, button:focus{color:#fa0;}
+button:hover, button:focus{color:#a30;}
 a:focus, button:focus{
   outline:0.2rem solid #fa0; outline-offset:0.2rem; position: relative; z-index: 500;}
 
