--- a/b_example/c_normal/css/src/monfee/main.css
+++ b/b_example/c_normal/css/src/monfee/main.css
@@ -34,9 +34,6 @@
     position: absolute; bottom: 140px; left: 0; }
 /*  ---------------------------------------------------------------- */
 
-
-
-
 h1{float: left; width:220px; height: 100%; background-color: #a30;}
 h1>a{background-image: url("../../../img/monfee/monfee_big_logo.png");
   background-size:80%;}
@@ -62,7 +59,64 @@ h1>a{background-image: url("../../../img/monfee/monfee_big_logo.png");
 
 /* #adBanner ===============================================================================  */
 
-#adBanner {width: 100%;height: calc(100% - 120px);background-color: #caa;}
+#adBanner {position:relative; z-index:500; width: 100%;height: calc(100% - 120px);}
+
+#adBanner > .indicator{position:absolute; z-index:50; bottom:2rem; left:50%; margin-left: 86px; width:280px; height:2rem;}
+#adBanner > .indicator > ul{padding:2px 0; box-sizing:border-box; width: 100%; height: 100%; }
+#adBanner > .indicator li{float:left; margin-right: 28px; width:32px; height:32px;}
+#adBanner > .indicator li:last-child{margin-right: 0;}
+#adBanner > .indicator li > button{ border-radius:100%; background-color: #fff;}
+#adBanner > .indicator li > button:hover,
+#adBanner > .indicator li > button:focus{background-color:rgba(170,51,0,0.5);}
+#adBanner > .indicator li.active > button{background-color:rgba(170,51,0,1);}
+
+
+#adBanner > .arrow_btn{position:absolute; z-index:50; top:50%; left: 0; padding:0 10%; box-sizing: border-box; 
+  width: 100%; height:0;}
+#adBanner > .arrow_btn>button{width:85px; height:175px; transform:translateY(-50%);
+  background-image: url("../../../img/monfee/adBanner/slide_btn.png");
+  background-repeat: no-repeat; background-position-y:0;}
+#adBanner > .arrow_btn > button:hover,
+#adBanner > .arrow_btn > button:focus{background-position-y:100%;}
+
+#adBanner .next_btn{float:right; background-position-x:100%;}
+#adBanner .prev_btn{float:left; background-position-x:0;}
+
+/*  =---------------------------------------------------------------------  */
+#adBanner > .view_outer{position:relative; width: 100%; height: 100%; overflow: hidden;}
+
+#adBanner .add_text{position:absolute; top:0; left:0;
+  padding:10rem 10vw; padding-left: 20vw; box-sizing: border-box;
+  width: 50%; height: 100%; background-color:rgba(170,51,0,0.7);
+  color:#fff;}
+#adBanner .add_text>h3{width: 100%; height:5vw; background-color: #caa; margin-bottom:1rem;}
+#adBanner .add_text>p{font-size:1.1rem; font-weight:100; text-align:justify;}
+
+#adBanner > .view_outer>ul{width:500%; height:100%;}
+#adBanner > .view_outer>ul>li{float:left; width:calc(100% / 5); height:100%;
+  background-repeat: no-repeat; background-position: 50% 50%; background-size: cover;}
+
+#adBanner > .view_outer li:nth-child(1){background-image:url("../../../img/monfee/adBanner/slide_05.png")}
+#adBanner > .view_outer li:nth-child(2){background-image:url("../../../img/monfee/adBanner/slide_04.png")}
+#adBanner > .view_outer li:nth-child(3){background-image:url("../../../img/monfee/adBanner/slide_03.png")}
+#adBanner > .view_outer li:nth-child(4){background-image:url("../../../img/monfee/adBanner/slide_02.png")}
+#adBanner > .view_outer li:nth-child(5){background-image:url("../../../img/monfee/adBanner/slide_01.png")}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* #bestNews ===============================================================================  */
 
