--- a/b_example/c_normal/css/src/monfee/main.css
+++ b/b_example/c_normal/css/src/monfee/main.css
@@ -85,7 +85,7 @@ h1>a{background-image: url("../../../img/monfee/monfee_big_logo.png");
 /*  =---------------------------------------------------------------------  */
 #adBanner > .view_outer{position:relative; width: 100%; height: 100%; overflow: hidden;}
 
-#adBanner .add_text{position:absolute; top:0; left:0;
+#adBanner .add_text{display:none;  position:absolute; top:0; left:0;
   padding:10rem 10vw; padding-left: 20vw; box-sizing: border-box;
   width: 50%; height: 100%; background-color:rgba(170,51,0,0.7);
   color:#fff;}
@@ -96,11 +96,11 @@ h1>a{background-image: url("../../../img/monfee/monfee_big_logo.png");
 #adBanner > .view_outer>ul>li{float:left; width:calc(100% / 5); height:100%;
   background-repeat: no-repeat; background-position: 50% 50%; background-size: cover;}
 
-#adBanner > .view_outer li:nth-child(1){background-image:url("../../../img/monfee/adBanner/slide_05.png")}
-#adBanner > .view_outer li:nth-child(2){background-image:url("../../../img/monfee/adBanner/slide_04.png")}
-#adBanner > .view_outer li:nth-child(3){background-image:url("../../../img/monfee/adBanner/slide_03.png")}
-#adBanner > .view_outer li:nth-child(4){background-image:url("../../../img/monfee/adBanner/slide_02.png")}
-#adBanner > .view_outer li:nth-child(5){background-image:url("../../../img/monfee/adBanner/slide_01.png")}
+#adBanner > .view_outer li.ban_1{background-image:url("../../../img/monfee/adBanner/slide_01.png")}
+#adBanner > .view_outer li.ban_2{background-image:url("../../../img/monfee/adBanner/slide_02.png")}
+#adBanner > .view_outer li.ban_3{background-image:url("../../../img/monfee/adBanner/slide_03.png")}
+#adBanner > .view_outer li.ban_4{background-image:url("../../../img/monfee/adBanner/slide_04.png")}
+#adBanner > .view_outer li.ban_5{background-image:url("../../../img/monfee/adBanner/slide_05.png")}
 
 
 
