--- a/b_example/c_normal/css/src/monfee/main.css
+++ b/b_example/c_normal/css/src/monfee/main.css
@@ -129,10 +129,22 @@ h1>a{background-image: url("../../../img/monfee/monfee_big_logo.png");
   .news_list dl>dd{width: 100%; height:125px; font-size:0.875rem; color:#555;}
 
 /*  .issue_text --------------------------------------------------------------------- */
-  .issue_text{width: 100%; height:860px; background-color: #2fb;}
-  .issue_text .indi_cator {}
-  .issue_text .news_text {}
-  .issue_text .news_img {}
+  .issue_text{position:relative; padding-top:260px; box-sizing:border-box; width: 100%; height:860px; background-color: #2fb;}
+  .issue_text .indi_cator {position:absolute; bottom:6rem; right:15%; z-index:500; width: 260px; height: 40px; background-color: #fff;}
+
+
+  .issue_text .news_text {position:relative; z-index:300; margin:auto; 
+    width: 80%; height: 520px; background-color: #fa0;}
+  .issue_text .news_text>dl{
+    position:absolute; top: 0; left: 0;
+    padding:3rem 2rem; box-sizing:border-box;
+    width:70%; height:100%;
+  }
+  .issue_text .news_text>dl>dt{margin-bottom:0.5rem; width:100%; height:3rem; font-size:1.3rem; text-decoration:underline;}
+  .issue_text .news_text>dl>dd{width:100%; height:auto; max-height:380px; font-size:1rem;}
+
+
+  .issue_text .news_img {position:absolute; top: 0; left: 0; z-index: 100; width: 100%; height: 100%; background-color: #777;}
 
 
 /*  .issue_icon --------------------------------------------------------------------- */
