--- a/b_example/c_normal/css/src/jquery/jquery_example_02.css
+++ b/b_example/c_normal/css/src/jquery/jquery_example_02.css
@@ -4,8 +4,26 @@
 
 #headBox{width: 100%; height: 150px; background-color: #a7f; }
 
-#navBox{display: none;}
+#navBox{margin: auto; width: 90%; height:30px; background-color: #acf;}
+#navBox .first_nav{width: 100%; height: 100%;}
+#navBox .first_nav>li{float: left; 
+  padding:0.2rem 0.3rem; box-sizing:border-box; width: 25%; height: 100%; text-align: center;}
+#navBox .first_nav>li>a{display: block; width: 100%; height: 100%; background-color: #fff;
+    font-size: 1.2rem; margin-bottom: 0.2rem;}
 
+#navBox .second_nav{width: 100%; height: auto; background-color: #aca;}
+#navBox .second_nav>li{padding-bottom: 0.2rem; width: 100%; height:auto; line-height: 2rem; border-bottom: 1px solid #fff;}
+#navBox .second_nav>li>a{display: block; width: 100%; height: 100%;}
+
+#navBox .second_nav ul{width: 100%;  height: auto; background-color: #7f8;}
+
+#navBox .second_nav{display: none;}
+#navBox .second_nav ul{display: none;}
+
+#navBox .first_nav>li:hover .second_nav{display: block;}
+#navBox .first_nav .second_nav>li:hover ul{display: block;}
+
+/* ------------------------------------------------------------- */
 #viewBox{width: 100%; height: 50rem; background-color: #ff8;}
 /* ------------------------------------------- */
 #contBox{margin: auto; width: 60rem; height: auto; background-color: #ccc;}
