--- a/b_example/c_normal/css/src/jquery/jquery_example_02.css
+++ b/b_example/c_normal/css/src/jquery/jquery_example_02.css
@@ -12,10 +12,11 @@
     font-size: 1.2rem; margin-bottom: 0.2rem;}
 
 #navBox .second_nav{width: 100%; height: auto; background-color: #aca;}
-#navBox .second_nav>li{padding-bottom: 0.2rem; width: 100%; height:auto; line-height: 2rem; border-bottom: 1px solid #fff;}
+#navBox .second_nav>li{position: relative; padding-bottom: 0.2rem; width: 100%; height: auto; /* height:2rem;*/ line-height: 2rem; border-bottom: 1px solid #fff;}
 #navBox .second_nav>li>a{display: block; width: 100%; height: 100%;}
 
-#navBox .second_nav ul{width: 100%;  height: auto; background-color: #7f8;}
+#navBox .second_nav ul{position: absolute; top:0; left:90%; z-index: 500; width: 100%;  height: auto; background-color: #7f8;}
+#navBox .first_nav>li:last-child .second_nav ul{left:-90%;}
 
 #navBox .second_nav{display: none;}
 #navBox .second_nav ul{display: none;}
