--- a/b_example/c_normal/css/src/jquery/jquery_example_02.css
+++ b/b_example/c_normal/css/src/jquery/jquery_example_02.css
@@ -4,19 +4,21 @@
 
 #headBox{width: 100%; height: 150px; background-color: #a7f; }
 
-#navBox{margin: auto; width: 90%; height:30px; background-color: #acf;}
-#navBox .first_nav{width: 100%; height: 100%;}
-#navBox .first_nav>li{float: left; 
-  padding:0.2rem 0.3rem; box-sizing:border-box; width: 25%; height: 100%; text-align: center;}
-#navBox .first_nav>li>a{display: block; width: 100%; height: 100%; background-color: #fff;
+#navBox{position: relative; z-index: 500; margin: auto; width:200px; height:auto; background-color: #acf;}
+#navBox .first_nav{width: 100%; height:auto;}
+#navBox .first_nav>li{padding:0.2rem 0.3rem; box-sizing:border-box; 
+  width:100%; height:auto; text-align: center;}
+#navBox .first_nav>li>a{display: block; width: 100%; height: 2.5rem; background-color: #fff;
     font-size: 1.2rem; margin-bottom: 0.2rem;}
 
-#navBox .second_nav{width: 100%; height: auto; background-color: #aca;}
+#navBox .second_nav{position:absolute; top:0; left:100%; width: 100%; height: auto; background-color: #aca;}
 #navBox .second_nav>li{position: relative; padding-bottom: 0.2rem; width: 100%; height: auto; /* height:2rem;*/ line-height: 2rem; border-bottom: 1px solid #fff;}
 #navBox .second_nav>li>a{display: block; width: 100%; height: 100%;}
 
-#navBox .second_nav ul{position: absolute; top:0; left:90%; z-index: 500; width: 100%;  height: auto; background-color: #7f8;}
-#navBox .first_nav>li:last-child .second_nav ul{left:-90%;}
+#navBox .second_nav ul{position: absolute; top:0; left:-20%; z-index: 800; width: 100%;  height: auto; background-color: #7f8;}
+/*#navBox .first_nav>li:last-child .second_nav ul{left:-90%;}*/
+
+#navBox .first_nav>li:active .second_nav{left:0; transition:all 500ms ease;}
 
 #navBox .second_nav{display: none;}
 #navBox .second_nav ul{display: none;}
