--- a/b_example/c_normal/css/src/jquery/jquery_example_02.css
+++ b/b_example/c_normal/css/src/jquery/jquery_example_02.css
@@ -11,20 +11,20 @@
 #navBox .first_nav>li>a{display: block; width: 100%; height: 2.5rem; background-color: #fff;
     font-size: 1.2rem; margin-bottom: 0.2rem;}
 
-#navBox .second_nav{position:absolute; top:0; left:100%; width: 100%; height: auto; background-color: #aca;}
+#navBox .second_nav{position:absolute; top:0; left:100%; z-index: 1000; width: 100%; height: auto; background-color: #aca;}
 #navBox .second_nav>li{position: relative; padding-bottom: 0.2rem; width: 100%; height: auto; /* height:2rem;*/ line-height: 2rem; border-bottom: 1px solid #fff;}
 #navBox .second_nav>li>a{display: block; width: 100%; height: 100%;}
 
-#navBox .second_nav ul{position: absolute; top:0; left:-20%; z-index: 800; width: 100%;  height: auto; background-color: #7f8;}
+#navBox .second_nav ul{position: absolute; top:0; left:-100%; z-index: 800; width: 100%;  height: auto; background-color: #7f8;}
 /*#navBox .first_nav>li:last-child .second_nav ul{left:-90%;}*/
 
-#navBox .first_nav>li:active .second_nav{left:0; transition:all 500ms ease;}
+/*#navBox .first_nav>li:active .second_nav{left:0; transition:all 500ms ease;}*/
 
 #navBox .second_nav{display: none;}
 #navBox .second_nav ul{display: none;}
 
-#navBox .first_nav>li:hover .second_nav{display: block;}
-#navBox .first_nav .second_nav>li:hover ul{display: block;}
+/*#navBox .first_nav>li:hover .second_nav{display: block;}*/
+/*#navBox .first_nav .second_nav>li:hover ul{display: block;}*/
 
 /* ------------------------------------------------------------- */
 #viewBox{width: 100%; height: 50rem; background-color: #ff8;}
