--- a/b_example/c_normal/css/src/jquery/horizontal_scroll.css
+++ b/b_example/c_normal/css/src/jquery/horizontal_scroll.css
@@ -28,10 +28,14 @@
 .col_05{background-color: #ffa;}
 .col_06{background-color: #fa6;}
 
+/*------------------------------------------------*/
+/*#wrap{}*/
+#contBox{width: 700%; height: 100%;}
+#contBox>div{float:left; width:calc(100% / 7); height: 100%;
+        padding:5rem 0; box-sizing: border-box;
+        font-size: 10rem; border-right:1px solid #333;}
 
-
-#contBox{display: none;}
-
+/*------------------------------------------------*/
 #footBox{position: fixed; bottom: 0; left: 0; z-index:1000;
   width: 100%; height: 2rem; background-color: #333; color:#fff;
   font-size: 1rem; font-weight: normal;}
