--- a/b_example/c_normal/css/src/jquery/multiSlide.css
+++ b/b_example/c_normal/css/src/jquery/multiSlide.css
@@ -7,8 +7,8 @@
 #headBox{display: none;}
 
 /* #viewBox ======================== */
-#viewBox{position:relative; margin:auto; margin-top:3rem; border:1px solid #333;
-        width: 500px; height: 300px; background-color: #caa;}
+#viewBox{position:relative; margin:auto; margin-top:3rem; /*border:1px solid #333;*/
+        width:900px; height: 300px; /*background-color: #caa;*/}
 
 #viewBox>.btn{position: absolute; bottom: -5.5rem; right: 0.5rem; width: 9.375rem; height: 1.5rem;}
 #viewBox>.btn>button{width: 4.375rem; height: 100%; background-color: #0af; color:#fff; border-radius:0.3rem;
@@ -16,8 +16,8 @@ font-weight: bold;}
 .next{float: right;}
 .prev{float: left;}
 
-.view_outer{padding-top: 1rem; width: 100%; height: 100%;}
-.view_outer>ul{width: 200%; height: 100%; background-color: #ccc;}
+.view_outer{padding-top: 1.7rem; padding-bottom: 1.7rem; width: 100%; height: 100%;}
+.view_outer>ul{width: 200%; height: 100%; /*background-color: #ccc;*/}
 .view_outer>ul>li{position: relative; float: left; border:2px solid #0af;
                   box-sizing: border-box; overflow: hidden;
                   width: 20%; height: 100%; font-size: 3rem;}
@@ -26,9 +26,10 @@ font-weight: bold;}
         transform:translate(-50%, -50%);}
 
 
-
+.view_outer{overflow: hidden;}
 .view_outer>ul{position: relative; left: 50%; transform:translateX(-50%);}
-
+.view_outer>ul>li{transform:scale(0.9); transition:all 800ms ease;}
+.view_outer>ul>li:nth-child(3){position:relative; z-index: 100; transform:scale(1.5); box-shadow:0.3rem 0.3rem 0.3rem rgba(0,0,0,0.5);}
 
 
 /* #contBox ======================== */
