--- a/b_example/c_normal/css/src/jquery/multiSlide.css
+++ b/b_example/c_normal/css/src/jquery/multiSlide.css
@@ -17,7 +17,7 @@ font-weight: bold;}
 .prev{float: left;}
 
 .view_outer{padding-top: 1.7rem; padding-bottom: 1.7rem; width: 100%; height: 100%;}
-.view_outer>ul{width: 200%; height: 100%; /*background-color: #ccc;*/}
+.view_outer>ul{padding-bottom: 3rem; width: 200%; height: 100%; /*background-color: #ccc;*/}
 .view_outer>ul>li{position: relative; float: left; border:2px solid #0af;
                   box-sizing: border-box; overflow: hidden;
                   width: 20%; height: 100%; font-size: 3rem;}
@@ -29,7 +29,7 @@ font-weight: bold;}
 .view_outer{overflow: hidden;}
 .view_outer>ul{position: relative; left: 50%; transform:translateX(-50%);}
 .view_outer>ul>li{transform:scale(0.9); transition:all 800ms ease;}
-.view_outer>ul>li:nth-child(3){position:relative; z-index: 100; transform:scale(1.5); box-shadow:0.3rem 0.3rem 0.3rem rgba(0,0,0,0.5);}
+.view_outer>ul>li.active{position:relative; z-index: 100; transform:scale(1.5); box-shadow:0.3rem 0.3rem 0.3rem rgba(0,0,0,0.5);}
 
 
 /* #contBox ======================== */
