--- a/b_example/c_normal/css/src/jquery/moreBtn.css
+++ b/b_example/c_normal/css/src/jquery/moreBtn.css
@@ -21,6 +21,12 @@ h1{text-indent:1rem; color:#fff;}
 .contry{float: left; font-size: 1.1rem; color:#fff; margin-left: 1rem;}
 .day{float: right;}
 /* ................................. */
+.list_indi{width: 100%; height: 2rem; background-color: #fff;}
+.list_indi>li{width: 2rem; height: 2rem; float: left; background-color: #0af; margin-right: 0.5rem; }
+.list_indi>li>button{width: 100%; height: 100%;color:#fff; font-weight: bold;}
+
+
+/* ................................. */
 
 .more_btn{margin: auto; width: 150px; height: 50px; background-color: #05a; color:#fff;}
 .more_btn>button{width: 100%; height: 100%; color:inherit;}
